day-10/ingress-11-canary-podnginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas-canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/auth-type: "basic"
    #nginx.ingress.kubernetes.io/auth-secret: "girpops-senhas-users"
    #nginx.ingress.kubernetes.io/auth-realm: "Autenticacao Necessaria"
    #cert-manager.io/cluster-issuer: letsencrypt-prod
    #cert-manager.io/cluster-issuer: letsencrypt-staging
    #nginx.ingress.kubernetes.io/affinity: "cookie"
    #nginx.ingress.kubernetes.io/session-cookie-name: "giropops-cookie"
    #nginx.ingress.kubernetes.io/upstream-hash-by: "$request-uri"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
    ingressClassName: nginx
#    tls:
#    - hosts: giropops-containers.expert
#      secretName: giropops-containers-expert-tls
    rules:
    - host: giropops-containers.expert
      http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx
              port:
                number: 80
