day-10/ingress-7-letsencrypt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
    ingressClassName: nginx
    tls:
    - hosts: giropops-containers.expert
      secretName: giropops-containers-expert-tls
    rules:
    - host: giropops-containers.expert
      http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: giropops-senhas
              port:
                number: 5000
